demos/ping-pong/ping-pong-sample/doc/run-on-k8s-manually/ping-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: 'myping-ping'
  namespace: '$NAMESPACE'
spec:
  selector:
    matchLabels:
      app: 'myping-ping'
  template:
    metadata:
      labels:
        app: 'myping-ping'
        vnf: 'ping'
        pingpong: 'pingpong.$NAMESPACE.example.com'
    spec:
      containers:
      - name: 'ping-vnf'
        image: '$PING_VNF_IMAGE'
        imagePullPolicy: Always
      - name: 'ping-vnf-manager'
        image: '$PING_VNF_MANAGER_IMAGE'
        imagePullPolicy: Always
