demos/ping-pong/ping-pong-sample/doc/run-on-k8s-manually/pong-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: 'mypong-pong'
  namespace: '$NAMESPACE'
spec:
  selector:
    matchLabels:
      app: 'mypong-pong'
  template:
    metadata:
      labels:
        app: 'mypong-pong'
        vnf: 'pong'
        pingpong: 'pingpong.$NAMESPACE.example.com'
    spec:
      containers:
      - name: 'pong-vnf'
        image: '$PONG_VNF_IMAGE'
        imagePullPolicy: Always
      - name: 'pong-vnf-manager'
        image: '$PONG_VNF_MANAGER_IMAGE'
        imagePullPolicy: Always
