demos/ping-pong/ping-pong-sample/doc/run-on-k8s-manually/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "myingress"
  namespace: "$NAMESPACE"
spec:
  rules:
  - host: "myingress.$NAMESPACE.example.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: "myping-ping"
          servicePort: 6003
